update user Management API